added inquirer package

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   
   <body>
-    <h1>senthol</h1>
+    <h1>senthol,</h1>
     <h2><a href="https://github.com/github"></a></h2>
   </body>
   </html>
